--- a/.github/workflows/pr-test.yml.j2
+++ b/.github/workflows/pr-test.yml.j2
@@ -32,6 +32,8 @@
 <% set ckpt_tests = [
     {'test_file': 'e2e/ckpt/test_qwen3_4B_ckpt.py', 'num_gpus': 8},
     {'test_file': 'e2e/ckpt/test_qwen3_4B_ckpt.py --async-save', 'num_gpus': 8},
+    {'test_file': 'e2e/ckpt/test_glm47_flash_ckpt.py', 'num_gpus': 8},
+    {'test_file': 'e2e/ckpt/test_glm47_flash_ckpt.py --async-save', 'num_gpus': 8},
 ] %>
 
 <% set long_tests = [
